--- a/documentacion/main.tex
+++ b/documentacion/main.tex
@@ -55,4 +55,12 @@
 	\nocite{*}
 	\addcontentsline{toc}{section}{Referencias}
 	\printbibliography
+	
+	\newpage
+	\section{Anexos}
+	\subsection{Enlace a video de youtube}
+	\url{https://youtu.be/H61JqlYFue4}
+	\subsection{Enlace a repositorio en github}
+	\url{https://github.com/jdv98/sig_proyecto2}
+	
 \end{document}
