--- a/documentacion/references.bib
+++ b/documentacion/references.bib
@@ -1,7 +1,32 @@
-@online{WinNT,
-	author = {MultiMedia LLC},
-	title = {{MS Windows NT} Kernel Description},
-	year = 1999,
-	url = {http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm},
-	urldate = {2010-09-30}
+@online{Ramsey,
+	author = {Paul Ramsey},
+	title = {(The Many) Spatial Indexes of PostGIS},
+	year = 2021,
+	url = {https://blog.crunchydata.com/blog/the-many-spatial-indexes-of-postgis},
+	urldate = {2021-11-07}
+}
+
+@online{geozelot,
+	author = {{geozelot}},
+	title = {When to use GiST and when to use SP-GiST index?},
+	year = 2020,
+	url = {https://gis.stackexchange.com/questions/374091/when-to-use-gist-and-when-to-use-sp-gist-index},
+	urldate = {2021-11-10}
+}
+
+@online{nstillwell,
+	author={{nstillwell}},
+	title ={{Ogr2ogr} - shape to postgis - is there a way to use and preserve an existing primary key?},
+	year=2018,
+	url={https://gis.stackexchange.com/questions/81165/ogr2ogr-shape-to-postgis-is-there-a-way-to-use-and-preserve-an-existing-prim},
+	urldate={2021-10-25}
+}
+
+
+@online{pgr-topology,
+	author={{pgrouting}},
+	title={pgr\_createTopology},
+	year=2021,
+	url={https://docs.pgrouting.org/3.1/en/pgr_createTopology.html},
+	urldate={2021-10-28}
 }
