--- a/documentacion/segmentos/0-introduccion.tex
+++ b/documentacion/segmentos/0-introduccion.tex
@@ -1,3 +1,6 @@
 % !TeX spellcheck = es_ES
 \section{Introducción}
+Los usuarios de servicios de buses del país no siempre cuentan con las mejores herramientas o productos que les indiquen cuales son las mejores opciones de viaje por lo que se suelen optar simplemente por la que recuerdan o la que se sabe "del boca a boca" por lo que brindar una información más precisa de mano de la ARESEP y otros geoservicios como lo puede ser OpenStreetMaps puede implicar una mejora significativa en la forma en que se percibe viajar en bus.
+
+Esto ya abre a más posibilidades a servicios más complejos como cuáles paradas debe visitar el usuario o debería visitar para hacer su viaje el más optimo y no pasar tanto tiempo viajando y más tiempo en su destino de preferencia.
 \newpage 
