--- a/documentacion/segmentos/3-analisis_resultados.tex
+++ b/documentacion/segmentos/3-analisis_resultados.tex
@@ -6,10 +6,10 @@
 \resultados{
 	Implementación del visor&Completo&?
 	Diseño de base de datos&Completo&?
-	Registro de datos (lineas de bus, vías, y paradas)&Completo&?
+	Registro de datos (lineas de bus, vías, y paradas)&Completo&Aunque no se llega a comprobar que existan los 500km en ruta y tampoco existen las 50 paradas.?
 	Carga de capas en el visor&Incompleto&Solo carga las paradas de buses?
-	Ruteo punto de origen y destino y despliegue de resultados geográficos&&?
-	Despliegue de detalles en la ruta resultante&&?
+	Ruteo punto de origen y destino y despliegue de resultados geográficos&Incompleto&Hace el ruteo y despligue de información tanto del dijsktra como la impresión de la ruta, no obstante, no imprime las paradas intermedias entre el punto de inicio y final?
+	Despliegue de detalles en la ruta resultante&Incompleto&Los únicos detalles que se despliegan de forma detallada son los resultados generados por el dijkstra.?
 	Documentación interna&Completo&?
 	Documentación Externa&Completo&
 }
