--- a/documentacion/segmentos/4-conclusiones.tex
+++ b/documentacion/segmentos/4-conclusiones.tex
@@ -1,3 +1,6 @@
 % !TeX spellcheck = es_ES
 \section{Conclusiones}
+
+El proyecto presenta un gran potencial a pesar de las limitaciones que se presentan por parte de la ARESEP y OSM en cuanto a la información geografica brindada; lo cual solo indica el abandono o limitaciones que existen a nivel nacional para poder tener una información precisa que pueda ayudar a estudiantes o empresas poder explorar o incursionar en querer brindar geoservicios con datos estatales o de terceros como el ya mencionado.
+
 \newpage 
