--- a/documentacion/segmentos/5-recomendaciones.tex
+++ b/documentacion/segmentos/5-recomendaciones.tex
@@ -1,3 +1,6 @@
 % !TeX spellcheck = es_ES
 \section{Recomendaciones}
+
+Dentro de las recomendaciones que se pueden brindar sería buscar fuentes de información más precisa y métodos que permitan simplificar o filtrar más las calles para reducir en gran medida el trabajo manual que se pueda llegar a necesitar a la hora de hacer un ruteo entre las paradas.
+
 \newpage 
